docs: add documentation for create tags
